[metadata]
name = audio_align
version = 0.0.1
license = GNU GPLv3
description = Tools for audio alignment
long_description = README.md
author = Andre Almeida
author_email = andre@thoughts4sounds.com
classifiers=
    Development Status :: 2 - Pre-Alpha
    Topic :: Multimedia :: Sound/Audio :: Analysis

[options]
packages = find:
package_dir =
    =audio_align
include_package_data = True
install_requires =
    numpy
    scipy
    librosa
    scikit-learn

[options.packages.find]
where=audio_align